- Remove lock switch support

2021-06-08: 2.0.7 (baa61c9)
- Add user calibration support
- Add special handling for ID.3

2021-07-06: 2.0.8 (3250325)
- Remove unused low-level-mode
- Fix erroneous initialization of cp_duty_cycle
- Use the correct magic number for managed configuration

2021-07-06: 2.0.9 (1a9dece)
- Ignore glitches in contactor check

2021-07-16: 2.0.10 (63808f5)
- Add hardware version to get_low_level_state

2021-10-11. 2.0.11 (ce6d2ed)
- Add set_indicator_led API (compatible to EVSE V2)
- Add 500ms delay between state change from B to A in ID.3 mode

2021-10-27: 2.0.12 (9a7bb80)
- Add ChargeTime parameter to low level state getter
- Add GetButtonState API
- Add GetAllDataX API (for internal use in WARP Charger)

2022-03-30: 2.1.0 (8524e38)
- Add support for charging slots and corresponding API

2022-05-02: 2.1.1 (4c219b8)
- Add FactoryReset-function

2022-05-06: 2.1.2 (3b72e77)
- Improve button/key stop logic

2022-06-07: 2.1.3 (66b31ec)
- Make sure to never start charging when key switch is turned off
- Increase ID.3 mode wait time hysteresis time from 500ms to 2500ms
- Make sure LED turns on until standby for every state change

2022-09-13: 2.1.4 (d5b9a2f)
- Make sure charging starts again when autostart is active and stop button was pressed while car was not charging
- Improve CP/PE resistance calculation (make sure there can't be over-/underflow)
- Add minimum time of 30s between error state E/F and next activation of contactor

2022-11-16: 2.1.5 (40c98f6):
- Add additional master communication watchdog

2022-12-22: 2.1.6 (eeb84d8):
- Make sure contactor is not turned off under load, even if stop of charging is triggered by wallbox
- Add API for get/set boost modus

2023-06-21: 2.1.7 (81eedf5):
- Add blink led indicator code 2001-2010 for custom error code with 1-10 "blink amount"

2023-XX-XX: 2.1.8 (TBD):
- Fix read of stored startup value of boost mode
- Make sure that ID.3 mode also works for state changes that go from C directly to A