@@ -80,3 +80,5 @@
 2023-XX-XX: 2.1.8 (TBD):
 - Fix read of stored startup value of boost mode
 - Make sure that ID.3 mode also works for state changes that go from C directly to A
+- Wait for at least 30 seconds until contactor is turned on again after state D
+- Wait for at least 5 seconds until contactor is tunred on again after charging was stopped
